--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -76,9 +76,6 @@
             .curved-btn {
               @extend %curved-btn;
             }
-            .more-details {
-              @extend %more-details;
-            }
           }
         }
         @media (min-width: 992px) {
@@ -264,6 +261,11 @@
     &:first-child {
       margin-bottom: 15px;
     }
+    b {
+      font-family: "TT Commons Bold";
+      font-size: 20px;
+      font-weight: normal;
+    }
     .card {
       border-radius: 10px;
       border: 1px solid #ececec;
@@ -305,35 +307,134 @@
       }
       .card-desc {
         padding: 240px 20px 20px;
-        b {
-          font-family: "TT Commons Bold";
-          display: block;
-          font-size: 20px;
-          font-weight: normal;
-        }
         p {
           line-height: 20px;
           color: $black_50;
         }
-        .group{
-          @include Flexible($j-cont:space-between);
+        .group {
+          @include Flexible($j-cont: space-between);
           margin: 10px 0;
-          .g-item{
+          .g-item {
             width: 50%;
-            p{
+            p {
               font-size: 15px;
             }
-            b{
+            b {
               font-size: 22px;
               font-family: "TT Commons Medium";
             }
           }
         }
-        .yelo-btn{
+        .yelo-btn {
           width: 100%;
           font-size: 16px;
           height: auto;
           line-height: 25.6px;
+        }
+      }
+    }
+    .loan-calc {
+      padding: 20px;
+      border-radius: 10px;
+      border: 1px solid #ececec;
+      height: 100%;
+      overflow: hidden;
+      .loan-title {
+        @include Flexible($j-cont: space-between);
+        .arr-btn {
+          display: none;
+        }
+      }
+      .loan-desc {
+        padding-top: 10px;
+        .loan-inputs {
+          border-radius: 10px;
+          border: 1px solid #e7e7e7;
+          .loan-item {
+            padding: 10px 10px;
+            position: relative;
+            p {
+              color: $black_50;
+              font-size: 15px;
+              line-height: 15px;
+              margin-bottom: 4px;
+            }
+            .range-result {
+              font-size: 26px;
+              line-height: 26px;
+              width: 100%;
+              font-family: "TT Commons Medium";
+            }
+            .loan-info {
+              position: absolute;
+              font-family: "TT Commons Bold";
+              font-size: 15px;
+              text-transform: uppercase;
+              color: $black_50;
+              right: 17px;
+              bottom: 20px;
+              line-height: 15px;
+            }
+            input[type="range"] {
+              width: 100%;
+              position: absolute;
+              left: 0px;
+              bottom: 0px;
+              background-color: $black_10;
+              --range: calc(var(--max) - var(--min));
+              --ratio: calc((var(--val) - var(--min)) / var(--range));
+              --sx: calc(0.5 * 1.5em + var(--ratio) * (100% - 1.5em));
+              &::-moz-range-thumb {
+                appearance: none;
+                height: 20px;
+                width: 20px;
+                border-radius: 100%;
+                background: #ffffff;
+                cursor: pointer;
+                background: #ffffff;
+                border: 3px solid #ffc628;
+              }
+              &::-webkit-slider-runnable-track {
+                width: 100%;
+                height: 4px;
+                cursor: pointer;
+                background: linear-gradient(#ffc628, #ffc628) 0 / var(--sx) 100%
+                  no-repeat;
+              }
+              &::-webkit-slider-thumb {
+                height: 24px;
+                width: 24px;
+                appearance: none;
+                border-radius: 100%;
+                background: #ffffff;
+                cursor: pointer;
+                background: #ffffff;
+                border: 5px solid #ffc628;
+                margin: -10px 0 0 0;
+                box-sizing: border-box;
+              }
+              &::-moz-range-track {
+                width: 100%;
+                height: 3px;
+                cursor: pointer;
+              }
+              &::-ms-track {
+                width: 100%;
+                height: 3px;
+                cursor: pointer;
+              }
+              &::-ms-thumb {
+                height: 20px;
+                width: 20px;
+                border-radius: 100%;
+                appearance: none;
+                background: #ffffff;
+                cursor: pointer;
+                background: #ffffff;
+                border: 3px solid #ffc628;
+              }
+            }
+          }
         }
       }
     }
@@ -348,9 +449,57 @@
         width: 50%;
         margin: 0;
         padding: 0 15px;
-        .card-desc {
-          b {
-            font-size: 22px;
+        b {
+          font-size: 22px;
+        }
+        .card {
+          .card-img {
+            width: 190px;
+            height: 300px;
+            transform: none;
+            top: 30px;
+            left: auto;
+          }
+          .card-desc {
+            width: 50%;
+            padding: 30px 0 30px 30px;
+            height: 100%;
+            p {
+              font-size: 16px;
+            }
+            .group {
+              margin: 15px 0 25px 0;
+            }
+            .yelo-btn {
+              font-size: 18px;
+              width: 200px;
+              line-height: 29px;
+            }
+          }
+        }
+        .loan-calc {
+          padding: 30px;
+          .loan-title {
+            .arr-btn {
+              display: inline-block;
+            }
+          }
+          .loan-desc {
+            padding-top: 30px;
+            .loan-inputs {
+              height: 70px;
+              border-radius: 10px 10px 10px 0;
+              @include Flexible($j-cont: space-between);
+            }
+          }
+        }
+        &:first-child {
+          &:hover {
+            .card {
+              .card-img {
+                transform: translateY(-10px);
+              }
+            }
           }
         }
       }
