--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -102,27 +102,48 @@ body {
   max-width: 1140px;
   padding: 0 15px;
   margin: 0 auto;
-  @media (min-width:992px) {
+  @media (min-width: 992px) {
     padding: 0 20px;
   }
 }
-h1, h2, h3, h4 {
+.row {
+  .col {
+    &:first-child {
+      margin-bottom: 15px;
+    }
+  }
+  @media (min-width: 992px) {
+    @include Flexible();
+    margin: 0 -15px;
+    .col {
+      width: 50%;
+      padding: 0 15px;
+      &:first-child {
+        margin-bottom: 0px;
+      }
+    }
+  }
+}
+h1,
+h2,
+h3,
+h4 {
   font-weight: normal;
 }
 
-.yelo-btn{
+.yelo-btn {
   @extend %yelo-btn;
 }
-.more-details{
+.more-details {
   @extend %more-details;
 }
-.arr-btn{
+.arr-btn {
   @extend %arr-btn;
 }
-.d-none{
+.d-none {
   display: none;
 }
-.b-red{
+.b-red {
   background-color: red;
   margin-top: 50px;
 }
