--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1509,7 +1509,7 @@ header.fix-head .header-bottom .header-additions.show {
 }
 .stroies-section .stories .swiper-wrapper .swiper-slide {
   margin-left: 15px;
-  width: 305px !important;
+  width: 305px;
   height: 140px;
   border-radius: 10px;
   overflow: hidden;
@@ -1518,7 +1518,7 @@ header.fix-head .header-bottom .header-additions.show {
 }
 @media (min-width: 992px) {
   .stroies-section .stories .swiper-wrapper .swiper-slide {
-    width: 346.5px !important;
+    width: 346.5px;
     margin-left: 20px;
   }
   .stroies-section .stories .swiper-wrapper .swiper-slide:not(:last-child) {
@@ -1848,5 +1848,233 @@ header.fix-head .header-bottom .header-additions.show {
   }
   .loan-calculator .row .col:first-child:hover .card .card-img {
     transform: translateY(-10px);
+  }
+}
+
+.usefulForYou {
+  margin-bottom: 30px;
+}
+.usefulForYou .section-title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.usefulForYou .section-title b {
+  padding: 7px 0;
+  font-size: 20px;
+  line-height: normal;
+  font-family: "TT Commons Bold";
+  display: inline-block;
+  font-weight: normal;
+}
+.usefulForYou .section-content .col-content {
+  position: relative;
+  border-radius: 10px;
+  border: 1px solid #ececec;
+  height: 100%;
+  overflow: hidden;
+}
+.usefulForYou .section-content .col-content .app-image {
+  width: 100%;
+  height: 200px;
+  position: relative;
+  bottom: 0px;
+  right: 0px;
+  background: #FFC628 no-repeat 17% 14px/80%;
+  border-radius: 10px 10px 0 0;
+  overflow: hidden;
+}
+.usefulForYou .section-content .col-content .app-image .app-phone {
+  position: relative;
+  width: 180px;
+  height: 100%;
+  top: 0px;
+  left: -22px;
+  margin: 0 auto;
+  background: no-repeat bottom right/contain;
+  z-index: 2;
+}
+.usefulForYou .section-content .col-content .app-image .app-self {
+  width: 120px;
+  height: 213px;
+  position: absolute;
+  left: 50%;
+  top: 20px;
+  background-size: cover;
+  margin: 0 0 0 -60px;
+}
+.usefulForYou .section-content .col-content .app-desc {
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  position: relative;
+  z-index: 2;
+}
+.usefulForYou .section-content .col-content .app-desc b {
+  font-family: "TT Commons Bold";
+  display: block;
+  font-size: 20px;
+  line-height: 22px;
+  margin-bottom: 5px;
+}
+.usefulForYou .section-content .col-content .app-desc p {
+  color: rgba(0, 0, 0, 0.5019607843);
+  font-size: 16px;
+  line-height: 20px;
+}
+.usefulForYou .section-content .col-content .app-desc ul {
+  display: flex;
+  border-radius: 5px;
+  border: 1px solid #ececec;
+  background-color: #fff;
+  margin-top: 10px;
+}
+.usefulForYou .section-content .col-content .app-desc ul li {
+  position: relative;
+  width: 100%;
+}
+.usefulForYou .section-content .col-content .app-desc ul li:not(:first-child)::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 60%;
+  position: absolute;
+  left: 0;
+  top: 20%;
+  background-color: rgba(0, 0, 0, 0.1490196078);
+}
+.usefulForYou .section-content .col-content .app-desc ul li a {
+  display: block;
+  padding: 4px;
+  white-space: nowrap;
+  color: #000;
+}
+.usefulForYou .section-content .col-content .app-desc ul li a .app {
+  padding: 4px 0;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+@media (min-width: 375px) {
+  .usefulForYou .section-content .col-content .app-desc ul li a .app {
+    background: no-repeat left 12px/15px;
+    padding: 4px 0 4px 24px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app.apple {
+    background-image: url("../../public/images/apple.svg");
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app.android {
+    background-image: url("../../public/images/google_play.svg");
+    background-position-y: 15px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app.huawei {
+    background-image: url("../../public/images/huawei_play.svg");
+    background-position-y: 15.5px;
+  }
+}
+.usefulForYou .section-content .col-content .app-desc ul li a .app span {
+  opacity: 0.5;
+  color: #505050;
+  font-size: 11px;
+}
+.usefulForYou .section-content .col-content .app-desc ul li a .app p {
+  font-size: 16px;
+  position: relative;
+  top: -3px;
+  color: #505050;
+  opacity: 0.5;
+  letter-spacing: -0.4px;
+  line-height: 9px;
+  font-family: "TT Commons Medium";
+}
+@media (min-width: 992px) {
+  .usefulForYou .section-content .col-content .app-desc ul {
+    height: 55px;
+    position: absolute;
+    bottom: 45px;
+    left: 15px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a {
+    padding: 2px 6px 0 6px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app {
+    background-size: auto;
+    padding: 6px 0 6px 34px;
+    background-position-y: 8px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app.android {
+    background-position-y: 11px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app.huawei {
+    background-position-y: 13.5px;
+    background-size: 24px;
+  }
+  .usefulForYou .section-content .col-content .app-desc ul li a .app span {
+    font-size: 12px;
+  }
+}
+@media (min-width: 1024px) {
+  .usefulForYou .section-content .col-content .app-desc ul {
+    left: 45px;
+  }
+}
+@media (min-width: 992px) {
+  .usefulForYou {
+    margin-bottom: 50px;
+  }
+  .usefulForYou .section-title {
+    margin-bottom: 10px;
+  }
+  .usefulForYou .section-title b {
+    font-size: 25px;
+    padding: 0;
+  }
+  .usefulForYou .section-content .col:first-child {
+    width: 66.666%;
+  }
+  .usefulForYou .section-content .col:last-child {
+    width: 33.333%;
+  }
+  .usefulForYou .section-content .col .col-content {
+    background: url("../../public/images/app_block.svg") no-repeat right center/contain;
+  }
+  .usefulForYou .section-content .col .col-content .app-image {
+    width: 50%;
+    height: 115%;
+    position: absolute;
+    bottom: 0px;
+    right: 30px;
+    border-radius: 0;
+    background: none;
+  }
+  .usefulForYou .section-content .col .col-content .app-image .app-phone {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    margin: 0;
+  }
+  .usefulForYou .section-content .col .col-content .app-image .app-self {
+    width: 250px;
+    height: 375px;
+    left: 95px;
+    top: 46px;
+    bottom: 0;
+    margin: 0;
+    background-color: #ffc629;
+  }
+  .usefulForYou .section-content .col .col-content .app-desc {
+    padding: 45px;
+    width: 50%;
+  }
+  .usefulForYou .section-content .col .col-content .app-desc b {
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 10px;
+  }
+  .usefulForYou .section-content .col .col-content .app-desc p {
+    font-size: 18px;
+    line-height: 26px;
   }
 }/*# sourceMappingURL=style.css.map */
