--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -177,14 +177,14 @@
     .swiper-wrapper {
       .swiper-slide {
         margin-left: 15px;
-        width: 305px;
+        width: 305px !important;
         height: 140px;
         border-radius: 10px;
         overflow: hidden;
         display: block;
         position: relative;
         @media (min-width: 992px) {
-          width: 346.5px;
+          width: 346.5px !important;
           margin-left: 20px;
           &:not(:last-child) {
             margin-right: 10px;
@@ -450,7 +450,7 @@
             @include Flexible($j-cont: center);
             margin-bottom: 5px;
             .loan-item {
-              width: 33%;
+              width: fit-content;
               text-align: center;
               p {
                 color: $black_50;
@@ -521,7 +521,7 @@
                   border-right: 1px solid #e7e7e7;
                 }
                 input[type="range"] {
-                  background-color: #ffffff;
+                  background-color: transparent;
                 }
               }
             }
@@ -680,7 +680,7 @@
               }
             }
           }
-          @media (min-width:992px) {
+          @media (min-width: 992px) {
             height: 55px;
             position: absolute;
             bottom: 45px;
@@ -688,7 +688,7 @@
             li {
               a {
                 padding: 2px 6px 0 6px;
-                .app{
+                .app {
                   background-size: auto;
                   padding: 6px 0 6px 34px;
                   background-position-y: 8px;
@@ -706,9 +706,123 @@
               }
             }
           }
-          @media (min-width:1024px) {
+          @media (min-width: 1024px) {
             left: 45px;
           }
+        }
+      }
+    }
+    .col-inner {
+      padding: 20px;
+      border-radius: 10px;
+      border: 1px solid #ececec;
+      height: 100%;
+      overflow: hidden;
+      .col-title {
+        @include Flexible($j-cont: space-between);
+        b {
+          font-size: 20px;
+          font-family: "TT Commons Bold";
+          font-weight: normal;
+        }
+        .change-rates {
+          display: none;
+          position: relative;
+          padding: 5px 0 0 0;
+          .active-rate {
+            color: $black_50;
+            background: url("../../public/images/active_lang.svg") no-repeat
+              right center;
+            padding: 5px 15px 0 0;
+          }
+          .select-box {
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            transform-origin: right top;
+            background: #fff;
+            box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.17);
+            z-index: 9;
+            transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+            transform: scale(0);
+            opacity: 0;
+            visibility: hidden;
+            border-radius: 5px;
+            padding: 10px 0;
+            &.open-select {
+              transform: scale(1);
+              opacity: 1;
+              visibility: visible;
+            }
+            a {
+              padding: 0 20px;
+              display: block;
+              white-space: nowrap;
+              color: $black_50;
+              &.active {
+                color: black;
+              }
+            }
+          }
+        }
+      }
+      .calculator {
+        .c-line {
+          @include Flexible($j-cont: space-between);
+          padding-top: 10px;
+          border-bottom: 3px solid $primary_color;
+          input ,span{
+            font-size: 25px;
+            font-family: "TT Commons Bold";
+            width: 100%;
+            height: 40px;
+          }
+          .s-currency{
+            font-family: "TT Commons Bold";
+            background: no-repeat right 45%;
+            padding: 0 12px 0 0;
+            font-size: 16px;
+            cursor: pointer;
+          }
+        }
+        .c-result{
+          @include Flexible($j-cont: space-between);
+          margin-top: 25px;
+          .c-item{
+            width: 33.333%;
+            p{
+              color: $black_50;
+              @media (min-width:992px) {
+                font-size: 18px;
+              }
+            }
+            b{
+              display: block;
+              font-family: "TT Commons Bold";
+              font-size: 18px;
+            }
+          }
+        }
+      }
+      .info-p {
+        padding: 10px 0 0;
+        color: $black_90;
+        font-size: 14px;
+      }
+      .all-exchanges {
+        border-top: 1px solid #ececec;
+        display: block;
+        margin: 15px -30px -30px;
+        margin: 25px -20px -20px;
+        padding: 17px 30px;
+        font-family: "TT Commons Bold";
+        background: url("../../public/images/blue_arr.svg") no-repeat 91% 22px;
+        transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+        color: $link_color;
+        &:hover {
+          color: #fff;
+          background: $link_color url("../../public/images/white_arr.svg")
+            no-repeat 91% 22px;
         }
       }
     }
@@ -753,7 +867,7 @@
               width: 250px;
               height: 375px;
               left: 95px;
-              top: 46px;
+              top: 73px;
               bottom: 0;
               margin: 0;
               background-color: #ffc629;
@@ -771,6 +885,20 @@
               font-size: 18px;
               line-height: 26px;
             }
+          }
+        }
+        .col-inner {
+          padding: 30px;
+          .col-title {
+            b {
+              font-size: 22px;
+            }
+            .change-rates {
+              display: block;
+            }
+          }
+          .all-exchanges {
+            margin: 15px -30px -30px;
           }
         }
       }
