--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -8,5 +8,6 @@ $black_15: #00000026;
 $black_50:#00000080;
 $black_75:#000000bf;
 $black_60:#00000099;
+$black_90: rgba(0,0,0, 0.9);
 $socials_bg_color:#F3F1F7;
 $white_color_f8:#f8f8f8;
