--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,12 +1,18 @@
+section {
+  margin-bottom: 30px;
+  @media (min-width: 992px) {
+    margin-bottom: 50px;
+  }
+}
 .entrance {
   height: auto;
-  margin: 110px 0 30px;
+  margin-top: 110px;
   padding: 0 15px;
   width: 100%;
   overflow: hidden;
   position: relative;
   @media (min-width: 992px) {
-    margin: 0 0 50px 0;
+    margin-top: 0;
     padding: 0;
   }
   .swiper {
@@ -132,10 +138,6 @@
 }
 
 .stroies-section {
-  margin-bottom: 30px;
-  @media (min-width: 992px) {
-    margin-bottom: 50px;
-  }
   .title {
     font-family: "TT Commons Bold";
     @include Flexible($a-items: center);
@@ -258,7 +260,6 @@
 }
 
 .loan-calculator {
-  margin-bottom: 30px;
   .col {
     b {
       font-family: "TT Commons Bold";
@@ -469,9 +470,7 @@
       }
     }
   }
-
   @media (min-width: 992px) {
-    margin-bottom: 50px;
     .row {
       .col {
         b {
@@ -549,20 +548,27 @@
   }
 }
 
-.usefulForYou {
-  margin-bottom: 30px;
-  .section-title {
-    @include Flexible($j-cont: space-between);
-    margin-bottom: 5px;
+.section-title {
+  @include Flexible($j-cont: space-between);
+  margin-bottom: 5px;
+  b {
+    padding: 7px 0;
+    font-size: 20px;
+    line-height: normal;
+    font-family: "TT Commons Bold";
+    display: inline-block;
+    font-weight: normal;
+  }
+  @media (min-width: 992px) {
+    margin-bottom: 10px;
     b {
-      padding: 7px 0;
-      font-size: 20px;
-      line-height: normal;
-      font-family: "TT Commons Bold";
-      display: inline-block;
-      font-weight: normal;
+      font-size: 25px;
+      padding: 0;
     }
   }
+}
+
+.usefulForYou {
   .section-content {
     .col-content {
       position: relative;
@@ -771,13 +777,14 @@
           @include Flexible($j-cont: space-between);
           padding-top: 10px;
           border-bottom: 3px solid $primary_color;
-          input ,span{
+          input,
+          span {
             font-size: 25px;
             font-family: "TT Commons Bold";
             width: 100%;
             height: 40px;
           }
-          .s-currency{
+          .s-currency {
             font-family: "TT Commons Bold";
             background: no-repeat right 45%;
             padding: 0 12px 0 0;
@@ -785,18 +792,18 @@
             cursor: pointer;
           }
         }
-        .c-result{
+        .c-result {
           @include Flexible($j-cont: space-between);
           margin-top: 25px;
-          .c-item{
+          .c-item {
             width: 33.333%;
-            p{
+            p {
               color: $black_50;
-              @media (min-width:992px) {
+              @media (min-width: 992px) {
                 font-size: 18px;
               }
             }
-            b{
+            b {
               display: block;
               font-family: "TT Commons Bold";
               font-size: 18px;
@@ -828,14 +835,6 @@
     }
   }
   @media (min-width: 992px) {
-    margin-bottom: 50px;
-    .section-title {
-      margin-bottom: 10px;
-      b {
-        font-size: 25px;
-        padding: 0;
-      }
-    }
     .section-content {
       .col {
         &:first-child {
@@ -899,6 +898,80 @@
           }
           .all-exchanges {
             margin: 15px -30px -30px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.lastest-news {
+  .col {
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+    .col-content {
+      border-radius: 10px;
+      border: 1px solid #ececec;
+      height: 100%;
+      overflow: hidden;
+      a {
+        display: block;
+        .news-desc {
+          padding: 20px;
+          b {
+            display: inline-block;
+            color: #000;
+            min-height: 72px;
+            font-family: "TT Commons Bold";
+            font-size: 18px;
+            line-height: 24px;
+            margin-bottom: 10px;
+          }
+          .news-foot {
+            @include Flexible($j-cont: space-between, $a-items: center);
+            margin-top: 10px;
+            time {
+              display: inline-block;
+              color: $black_60;
+            }
+          }
+        }
+      }
+    }
+  }
+  .news-link {
+    padding-top: 25px;
+    text-align: center;
+    a {
+      display: inline-block;
+      height: 48px;
+      padding: 0 54px 0 20px;
+      color: $link_color;
+      line-height: 50px;
+      background: url("../../public/images/blue_arr.svg") no-repeat calc(100% - 12px) 50%;
+      font-family: "TT Commons Bold";
+      box-shadow: inset 0 0 0 1px $link_color;
+      border-radius: 6px;
+      &:hover {
+        color: #fff;
+        background: $link_color url("../../public/images/white_arr.svg") no-repeat calc(100% - 12px) 50%;
+      }
+    }
+  }
+  @media (min-width: 992px) {
+    .col {
+      &:not(:last-child) {
+        margin-bottom: 0px;
+      }
+      width: 33.333%;
+      .col-content {
+        a {
+          .news-desc {
+            padding: 30px;
+            b {
+              font-size: 20px;
+            }
           }
         }
       }
