--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -133,7 +133,7 @@
 }
 @media (min-width: 992px) {
   .arr-btn {
-    background: url("../../public/images/blue_arr.svg") no-repeat right 9px;
+    background: url("../../public/images/blue_arr.svg") no-repeat right 10px;
     padding: 5px 38px 5px 0;
   }
 }
@@ -260,7 +260,7 @@ body.o-hidden .header-bottom {
   }
 }
 
-.row .col:first-child {
+.row .col:not(:last-child) {
   margin-bottom: 15px;
 }
 @media (min-width: 992px) {
@@ -272,7 +272,7 @@ body.o-hidden .header-bottom {
     width: 50%;
     padding: 0 15px;
   }
-  .row .col:first-child {
+  .row .col:not(:last-child) {
     margin-bottom: 0px;
   }
 }
@@ -1327,9 +1327,18 @@ header.fix-head .header-bottom .header-additions.show {
   border-radius: 10px;
 }
 
+section {
+  margin-bottom: 30px;
+}
+@media (min-width: 992px) {
+  section {
+    margin-bottom: 50px;
+  }
+}
+
 .entrance {
   height: auto;
-  margin: 110px 0 30px;
+  margin-top: 110px;
   padding: 0 15px;
   width: 100%;
   overflow: hidden;
@@ -1337,7 +1346,7 @@ header.fix-head .header-bottom .header-additions.show {
 }
 @media (min-width: 992px) {
   .entrance {
-    margin: 0 0 50px 0;
+    margin-top: 0;
     padding: 0;
   }
 }
@@ -1462,14 +1471,6 @@ header.fix-head .header-bottom .header-additions.show {
   box-shadow: 0 0 0 4px #ffc628;
 }
 
-.stroies-section {
-  margin-bottom: 30px;
-}
-@media (min-width: 992px) {
-  .stroies-section {
-    margin-bottom: 50px;
-  }
-}
 .stroies-section .title {
   font-family: "TT Commons Bold";
   display: flex;
@@ -1591,9 +1592,6 @@ header.fix-head .header-bottom .header-additions.show {
   height: 140px;
 }
 
-.loan-calculator {
-  margin-bottom: 30px;
-}
 .loan-calculator .col b {
   font-family: "TT Commons Bold";
   font-size: 20px;
@@ -1788,9 +1786,6 @@ header.fix-head .header-bottom .header-additions.show {
   font-size: 18px;
 }
 @media (min-width: 992px) {
-  .loan-calculator {
-    margin-bottom: 50px;
-  }
   .loan-calculator .row .col b {
     font-size: 22px;
   }
@@ -1853,15 +1848,12 @@ header.fix-head .header-bottom .header-additions.show {
   }
 }
 
-.usefulForYou {
-  margin-bottom: 30px;
-}
-.usefulForYou .section-title {
+.section-title {
   display: flex;
   justify-content: space-between;
   margin-bottom: 5px;
 }
-.usefulForYou .section-title b {
+.section-title b {
   padding: 7px 0;
   font-size: 20px;
   line-height: normal;
@@ -1869,6 +1861,16 @@ header.fix-head .header-bottom .header-additions.show {
   display: inline-block;
   font-weight: normal;
 }
+@media (min-width: 992px) {
+  .section-title {
+    margin-bottom: 10px;
+  }
+  .section-title b {
+    font-size: 25px;
+    padding: 0;
+  }
+}
+
 .usefulForYou .section-content .col-content {
   position: relative;
   border-radius: 10px;
@@ -2081,7 +2083,8 @@ header.fix-head .header-bottom .header-additions.show {
   padding-top: 10px;
   border-bottom: 3px solid #FFC628;
 }
-.usefulForYou .section-content .col-inner .calculator .c-line input, .usefulForYou .section-content .col-inner .calculator .c-line span {
+.usefulForYou .section-content .col-inner .calculator .c-line input,
+.usefulForYou .section-content .col-inner .calculator .c-line span {
   font-size: 25px;
   font-family: "TT Commons Bold";
   width: 100%;
@@ -2136,16 +2139,6 @@ header.fix-head .header-bottom .header-additions.show {
   background: #0091FE url("../../public/images/white_arr.svg") no-repeat 91% 22px;
 }
 @media (min-width: 992px) {
-  .usefulForYou {
-    margin-bottom: 50px;
-  }
-  .usefulForYou .section-title {
-    margin-bottom: 10px;
-  }
-  .usefulForYou .section-title b {
-    font-size: 25px;
-    padding: 0;
-  }
   .usefulForYou .section-content .col:first-child {
     width: 66.666%;
   }
@@ -2205,5 +2198,73 @@ header.fix-head .header-bottom .header-additions.show {
   }
   .usefulForYou .section-content .col .col-inner .all-exchanges {
     margin: 15px -30px -30px;
+  }
+}
+
+.lastest-news .col:not(:last-child) {
+  margin-bottom: 15px;
+}
+.lastest-news .col .col-content {
+  border-radius: 10px;
+  border: 1px solid #ececec;
+  height: 100%;
+  overflow: hidden;
+}
+.lastest-news .col .col-content a {
+  display: block;
+}
+.lastest-news .col .col-content a .news-desc {
+  padding: 20px;
+}
+.lastest-news .col .col-content a .news-desc b {
+  display: inline-block;
+  color: #000;
+  min-height: 72px;
+  font-family: "TT Commons Bold";
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 10px;
+}
+.lastest-news .col .col-content a .news-desc .news-foot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+.lastest-news .col .col-content a .news-desc .news-foot time {
+  display: inline-block;
+  color: rgba(0, 0, 0, 0.6);
+}
+.lastest-news .news-link {
+  padding-top: 25px;
+  text-align: center;
+}
+.lastest-news .news-link a {
+  display: inline-block;
+  height: 48px;
+  padding: 0 54px 0 20px;
+  color: #0091FE;
+  line-height: 50px;
+  background: url("../../public/images/blue_arr.svg") no-repeat calc(100% - 12px) 50%;
+  font-family: "TT Commons Bold";
+  box-shadow: inset 0 0 0 1px #0091FE;
+  border-radius: 6px;
+}
+.lastest-news .news-link a:hover {
+  color: #fff;
+  background: #0091FE url("../../public/images/white_arr.svg") no-repeat calc(100% - 12px) 50%;
+}
+@media (min-width: 992px) {
+  .lastest-news .col {
+    width: 33.333%;
+  }
+  .lastest-news .col:not(:last-child) {
+    margin-bottom: 0px;
+  }
+  .lastest-news .col .col-content a .news-desc {
+    padding: 30px;
+  }
+  .lastest-news .col .col-content a .news-desc b {
+    font-size: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
